# 3d-from-scratch-attempt

./: .gitignore  CMakeLists.txt  Makefile  README.md
WindowTest/: CMakeLists.txt
WindowTestProject/: CMakeLists.txt
WindowTestProject/libs/WindowTest/: CMakeLists.txt
WindowTestProject/libs/WindowTest/include/WindowTest/: Man.h
WindowTestProject/libs/WindowTest/src/WindowTest/: Man.cpp  main.cpp
scripts/: build.sh  clean.sh  comp.sh  run.sh
src/: Bruh.cpp  Bruh.h  MainProgram.cpp  main.cpp
src/Stuff/: Madam.cpp  Madam.h
zzz/: 1build.sh  2build.sh  README.txt  build.sh  clean.sh  run.sh
